--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -12,10 +12,9 @@
             <div class="col-md-9 col-sm-12">
                 <ul class="header-widget">
                     <li>
-                        <i class="sl sl-icon-call-in"></i>
+                        <i class="sl sl-icon-login"></i>
                         <div class="widget-content">
-                            <span class="title">Questions?</span>
-                            <span class="data">(123) 123-456 </span>
+                            <span style="font-size: 20px;margin-top: 12px;" class="title"><a href="{{path ('monbon_hlm_dashboard_homepage')}}">Espace client</a></span>
                         </div>
                     </li>
 
@@ -61,7 +60,7 @@
                         </li>
 
                         <li>
-                            <a href="{{path ('monbon_hlm_home_quartier')}}">Les bailleurs</a>
+                            <a href="{{path ('monbon_hlm_home_bailleurs')}}">Les bailleurs</a>
                         </li>
 
                         <li class="dropdown">
