--- a/src/MonbonHLM/HomeBundle/Resources/views/Annonce/modifierannonce.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Annonce/modifierannonce.html.twig
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]>
-<html class="ie ie8" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
 
     <!-- Basic Page Needs
-    ================================================== -->
+ ================================================== -->
     <meta charset="utf-8" />
     <title>Annonces</title>
     {% include "::base.html.twig" %}
@@ -15,6 +14,7 @@
 <!-- Wrapper -->
 <div id="wrapper">
     {% include "::menu.html.twig" %}
+
     <!-- Titlebar
     ================================================== -->
     <div id="titlebar">
@@ -22,7 +22,8 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <h2>Ajouter une annonce</h2>
+                    <span>Modifier annonce</span>
+                    <!-- <span>Tagline</span> -->
                 </div>
             </div>
         </div>
@@ -33,19 +34,25 @@
     ================================================== -->
     <div class="container">
         <div class="row">
-            {{ form (form) }}
+
+            <form action="" method="post">
+                {{ form (form) }}
+            </form>
+
         </div>
+
+
     </div>
 
 
-    {% include "::footer.html.twig" %}
+    <!-- Footer
+   {% include "::footer.html.twig" %}
 
     <!-- Back To Top Button -->
     <div id="backtotop"><a href="#"></a></div>
 
 
     {% include "::scripts.html.twig" %}
-
 </div>
 <!-- Wrapper / End -->
 
