--- a/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/index.html.twig
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]>
-<html class="ie ie8" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
+
 
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>Annonces</title>
+    <title>Bailleurs - MonbonHLM</title>
     {% include "::base.html.twig" %}
 </head>
 
@@ -15,6 +15,8 @@
 <!-- Wrapper -->
 <div id="wrapper">
     {% include "::menu.html.twig" %}
+    <div class="clearfix"></div>
+
     <!-- Titlebar
     ================================================== -->
     <div id="titlebar">
@@ -22,7 +24,17 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <h2>Ajouter une annonce</h2>
+                    <h2>Bailleurs</h2>
+                    <span>Les bailleurs existants</span>
+
+                    <!-- Breadcrumbs -->
+                    <nav id="breadcrumbs">
+                        <ul>
+                            <li><a href="#">Accueil</a></li>
+                            <li>Bailleurs</li>
+                        </ul>
+                    </nav>
+
                 </div>
             </div>
         </div>
@@ -33,8 +45,19 @@
     ================================================== -->
     <div class="container">
         <div class="row">
-            {{ form (form) }}
+
+            {% for bailleurs in bailleursTab %}
+            <div class="col-md-4 col-sm-6">
+                <!-- Service -->
+                <div class="service">
+                        <img src="{{ asset('uploads/bailleurs/'~bailleurs.logo.id~'.'~bailleurs.logo.path) }}" alt="" style="width: 600px; height: auto" />
+                </div>
+            </div>
+            {% endfor %}
+
         </div>
+
+
     </div>
 
 
@@ -45,6 +68,7 @@
 
 
     {% include "::scripts.html.twig" %}
+
 
 </div>
 <!-- Wrapper / End -->
