--- a/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/modifier.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/modifier.html.twig
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]>
-<html class="ie ie8" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
+
 
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>Annonces</title>
+    <title>Accueil - MonbonHLM</title>
     {% include "::base.html.twig" %}
 </head>
 
@@ -15,6 +15,8 @@
 <!-- Wrapper -->
 <div id="wrapper">
     {% include "::menu.html.twig" %}
+    <div class="clearfix"></div>
+
     <!-- Titlebar
     ================================================== -->
     <div id="titlebar">
@@ -22,7 +24,16 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <h2>Ajouter une annonce</h2>
+                    <h2>Modifier bailleur</h2>
+
+                    <!-- Breadcrumbs -->
+                    <nav id="breadcrumbs">
+                        <ul>
+                            <li><a href="#">Accueil</a></li>
+                            <li>Bailleurs</li>
+                        </ul>
+                    </nav>
+
                 </div>
             </div>
         </div>
@@ -33,8 +44,14 @@
     ================================================== -->
     <div class="container">
         <div class="row">
-            {{ form (form) }}
+
+            <form action="" method="post">
+                {{ form (form) }}
+            </form>
+
         </div>
+
+
     </div>
 
 
@@ -45,6 +62,7 @@
 
 
     {% include "::scripts.html.twig" %}
+
 
 </div>
 <!-- Wrapper / End -->
