--- a/src/MonbonHLM/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/MonbonHLM/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -77,7 +77,7 @@
                                     <div class="panel-list-content">
                                         <span class="panel-list-time"><a href="{{ path('monbon_hlm_home_details_annonces', {'id':annonce  .id}) }}">Voir les détails</a></span>
                                         <a href="{{ path('monbon_hlm_home_details_annonces', {'id':annonce  .id}) }}" class="panel-list-title">Annonce numéro {{ annonce.id }} - Posté par {{ annonce.auteur.nom }} {{ annonce.auteur.prenom }}</a>
-                                        <span class="panel-list-meta">Type : <a href="#">{{ annonce.typelogement.type }}</a> | Quartier : <a href="#">{{ annonce.quartier.nom }} | Bailleur : {{ annonce.referencebailleur.nom }}</a></span>
+                                        <span class="panel-list-meta">Type : <a href="#">{{ annonce.typelogement.type }}</a> | Quartier : <a href="#">{{ annonce.quartier.nom }}</a><span> | Bailleur : <a href="">{{ annonce.referencebailleur.nom }}</a></span>
                                     </div>
                                 </li>
                                 {% endfor %}
@@ -99,7 +99,7 @@
                         <div class="portlet-header">
                             <h3>
                                 <i class="fa fa-bar-chart-o"></i>
-                                Sparkline
+                                Statistiques
                             </h3>
                         </div> <!-- /.portlet-header -->
 
@@ -141,157 +141,18 @@
                                     <div id="revenue-visits" data-bar-color="#c00">32, 38, 46, 49, 53, 48, 47, 56</div>
                                     <span class="spark-stat-value">$13,492</span>
                                     <h5 class="spark-stat-label">Revenue Visits</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-1">
+                FIJFJDI FIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDIFIJFJDI
+            </div>
+        </div>
 
-                                </div> <!-- /.col -->
-
-                            </div> <!-- /.row -->
-
-                        </div> <!-- /.portlet-content -->
-
-                    </div> <!-- /.portlet -->
-
-                </div> <!-- /.col -->
-
-            </div> <!-- /.row -->
-
-        </div> <!-- /.content-container -->
-
-    </div> <!-- /.content -->
-
-</div> <!-- /.container -->
-
-
-<footer class="footer">
-
-    <div class="container">
-
-        <div class="row">
-
-            <div class="col-sm-3">
-
-                <h4>About Theme</h4>
-
-                <br>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
-                <hr>
-
-                <p>&copy; 2014 Jumpstart Themes.</p>
-
-            </div> <!-- /.col -->
-
-            <div class="col-sm-3">
-
-                <h4>Support</h4>
-
-                <br>
-
-                <ul class="icons-list">
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Frequently Asked Questions</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Ask a Question</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Video Tutorial</a>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Feedback</a>
-                    </li>
-                </ul>
-
-            </div> <!-- /.col -->
-
-            <div class="col-sm-3">
-
-                <h4>Legal</h4>
-
-                <br>
-
-                <ul class="icons-list">
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">License</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Terms of Use</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Security</a>
-                    </li>
-                </ul>
-
-            </div> <!-- /.col -->
-
-            <div class="col-sm-3">
-
-                <h4>Settings</h4>
-
-                <br>
-
-                <ul class="icons-list">
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Consectetur adipisicing</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Eiusmod tempor </a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Fugiat nulla pariatur</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-angle-double-right icon-li"></i>
-                        <a href="javascript:;">Officia deserunt</a>
-                    </li>
-                </ul>
-
-            </div> <!-- /.col -->
-
-        </div> <!-- /.row -->
-
-    </div> <!-- /.container -->
-
-</footer>
-
-<script src="{{ asset('dashboard/js/libs/jquery-1.10.1.min.js')}}"></script>
-<script src="{{ asset('dashboard/js/libs/jquery-ui-1.9.2.custom.min.js')}}"></script>
-<script src="{{ asset('dashboard/js/libs/bootstrap.min.js')}}"></script>
-
-<!--[if lt IE 9]>
-<script src="{{ asset('dashboard/js/libs/excanvas.compiled.js')}}"></script>
-<![endif]-->
-
-<!-- Plugin JS -->
-<script src="{{ asset('dashboard/js/plugins/icheck/jquery.icheck.js')}}"></script>
-<script src="{{ asset('dashboard/js/plugins/select2/select2.js')}}"></script>
-<script src="{{ asset('dashboard/js/libs/raphael-2.1.2.min.js')}}"></script>
-<script src="{{ asset('dashboard/js/plugins/morris/morris.min.js')}}"></script>
-<script src="{{ asset('dashboard/js/plugins/sparkline/jquery.sparkline.min.js')}}"></script>
-<script src="{{ asset('dashboard/js/plugins/nicescroll/jquery.nicescroll.min.js')}}"></script>
-<script src="{{ asset('dashboard/js/plugins/fullcalendar/fullcalendar.min.js')}}"></script>
-
-<!-- App JS -->
-<script src="{{ asset('dashboard/js/target-admin.js')}}"></script>
-
-<!-- Plugin JS -->
-<script src="{{ asset('dashboard/js/demos/dashboard.js')}}"></script>
-<script src="{{ asset('dashboard/js/demos/calendar.js')}}"></script>
-<script src="{{ asset('dashboard/js/demos/charts/morris/area.js')}}"></script>
-<script src="{{ asset('dashboard/js/demos/charts/morris/donut.js')}}"></script>
-
+    </div>
+</div>
 </body>
 </html>
