--- a/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/index.html.twig
@@ -48,10 +48,12 @@
 
             {% for bailleurs in bailleursTab %}
             <div class="col-md-4 col-sm-6">
+                <a href="{{path ('monbon_hlm_home_annonces_quartier', {'id':bailleurs  .id}) }}">
                 <!-- Service -->
                 <div class="service">
                         <img src="{{ asset('uploads/bailleurs/'~bailleurs.logo.id~'.'~bailleurs.logo.path) }}" alt="" style="width: 600px; height: auto" />
                 </div>
+                </a>
             </div>
             {% endfor %}
 
