--- a/src/MonbonHLM/HomeBundle/Resources/views/Annonce/ajouterannonce.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Annonce/ajouterannonce.html.twig
@@ -31,12 +31,22 @@
 
     <!-- Content
     ================================================== -->
+    {% if app.user.annonce.count<=('0')%}
+        <div class="container">
+            <div class="row">
+                {{ form (form) }}
+            </div>
+        </div>
+    {% else %}
     <div class="container">
         <div class="row">
-            {{ form (form) }}
+            <div class="notification error closeable">
+                <p><span>Erreur!</span> Vous avez déjà une annonce. Vous pouvez la modifier <span><a href="{{path ('monbon_hlm_dashboard_homepage')}}">ici</a></span></p>
+                <a class="close" href="#"></a>
+            </div>
         </div>
     </div>
-
+    {% endif %}
 
     {% include "::footer.html.twig" %}
 
