--- a/src/MonbonHLM/HomeBundle/Resources/views/Message/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Message/index.html.twig
@@ -151,51 +151,6 @@
             <!-- ========= END MAIN FEATURE ========= -->
 
 
-
-
-            <!-- ========= 1/3 IMAGE RIGHT 2/3 CONTENT LEFT ========= -->
-            <!-- Wide -->
-            <table class="containerWide" border="0" align="center" bgcolor="edf7f9" cellpadding="0" cellspacing="0" width="100%" style="background-color: #edf7f9; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" >
-
-                <tr>
-                    <td>
-
-                        <!-- Box -->
-                        <table class="containerBox" border="0" align="center" cellpadding="0" cellspacing="0" width="600" bgcolor="ffffff" style="background-color: #ffffff; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
-
-
-
-                            <tr>
-
-                            </tr>
-                        </table>
-
-                <tr>
-                    <td>
-                        <!-- Box -->
-                        <table class="containerBox" border="0" align="center" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
-
-                            <!-- Space -->
-                            <tr><td height="5"></td></tr>
-
-                            <tr>
-                                <td align="center" style="color: #333333; font-family: Helvetica,Arial,sans-serif; font-size: 20px; line-height: 28px; font-weight: 600;" >
-
-                                    AUTRES IMAGE DE L'ANNONCE					</td>
-                            </tr>
-
-                            <!-- Space -->
-                            <tr><td height="5"></td></tr>
-
-                        </table>
-                    </td>
-                </tr>
-            </table>
-            <!-- ========= END TITLE ========= -->
-
-
-
-
             <!-- ========= SPACE ========= -->
             <table class="containerWide" bgcolor="edf7f9" border="0" align="center" cellpadding="0" cellspacing="0" width="100%" style="background-color: #edf7f9; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"  >
 
@@ -345,7 +300,7 @@
                                             </td>
                                             <td width="10" class="noDesktop">&nbsp;</td>
                                             <td>
-                                                {#<a href="http://localhost:8888/MonbonHLM/web/app_dev.php/annonce{{ userann.telephone }}" style="color: #ffffff; border-color: #ffffff; border-width: 2px; border-style: solid; text-decoration: none; padding-left: 10px; padding-right: 10px; padding-top: 8px; padding-bottom: 8px; border-radius: 4px; font-family: Helvetica,Arial,sans-serif; font-size: 14px; font-weight: 600; line-height: 20px;text-align: center;">Voir son annonce</a>#}
+                                                <a href="http://localhost:8888/MonbonHLM/web/app_dev.php/annonce-{{ userann }}" style="color: #ffffff; border-color: #ffffff; border-width: 2px; border-style: solid; text-decoration: none; padding-left: 10px; padding-right: 10px; padding-top: 8px; padding-bottom: 8px; border-radius: 4px; font-family: Helvetica,Arial,sans-serif; font-size: 14px; font-weight: 600; line-height: 20px;text-align: center;">Voir son annonce</a>
                                             </td>
                                         </tr>
                                     </table>
