--- a/src/MonbonHLM/HomeBundle/Resources/views/Quartier/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Quartier/index.html.twig
@@ -47,20 +47,24 @@
         <div class="row">
 
             {% for quartier in quartierTab %}
-            <div class="col-md-4 col-sm-6">
-                <!-- Service -->
-                <div class="service">
-                    <img src="{{ asset('uploads/quartiers/'~quartier.photo.id~'.'~quartier.photo.path) }}" alt="" />
-                    <div class="service-overlay">
-                        <i class="reneva icon-37"></i>
-                        <h4>{{ quartier.nom }}</h4>
-                        <div class="hidden-part">
-                            <p>A fresh coat of paint can breathe life into any room.</p>
-                            <a href="single-service-1.html">Read More</a>
-                        </div>
+                <div class="container">
+                    <div class="row">
+                        {% for quartiers in quartierTab %}
+                            <div class="col-md-4 col-sm-6">
+                                <a href="{{path ('monbon_hlm_home_annonces_quartier', {'id':quartier  .id}) }}" class="project-category">
+                                    <figure class="effect">
+                                        <img src="{{ asset('uploads/quartiers/'~quartier.photo.id~'.'~quartier.photo.path) }}" alt="img12" />
+                                        <figcaption>
+                                            <div>
+                                                <h3>{{ quartier.nom }}</h3>
+                                            </div>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
-            </div>
             {% endfor %}
 
         </div>
