--- a/src/MonbonHLM/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/MonbonHLM/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,5 +1,5 @@
-{% extends "MonbonHLMUserBundle::layout.html.twig" %}
+{% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-    {% include "MonbonHLMUserBundle:Registration:register_content.html.twig" %}
+{% include "FOSUserBundle:Registration:register_content.html.twig" %}
 {% endblock fos_user_content %}
