--- a/src/MonbonHLM/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/MonbonHLM/UserBundle/Resources/views/Security/login.html.twig
@@ -1,24 +1,78 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<head>
+    <title>Login - Target Admin</title>
 
-{% trans_default_domain 'FOSUserBundle' %}
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 
-{% block fos_user_content %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
-test
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700">
+    <link rel="stylesheet" href="{{ asset('dashboard/css/font-awesome.min.css')}}">
+    <link rel="stylesheet" href="{{ asset('dashboard/js/libs/css/ui-lightness/jquery-ui-1.9.2.custom.min.css')}}">
+    <link rel="stylesheet" href="{{ asset('dashboard/css/bootstrap.min.css')}}">
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+    <!-- App CSS -->
+    <link rel="stylesheet" href="{{ asset('dashboard/css/target-admin.css')}}">
+    <link rel="stylesheet" href="{{ asset('dashboard/css/custom.css')}}'">
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+</head>
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-</form>
-{% endblock fos_user_content %}
+</div> <!-- /.navbar -->
+
+<div class="account-wrapper">
+
+    <div class="account-logo">
+        <img src="./img/logo-login.png" alt="Target Admin">
+    </div>
+
+    <div class="account-body">
+
+        <h3 class="account-body-title">Connectez vous à votre compte</h3></br>
+
+        <form class="form-login" action="{{ path("fos_user_security_check") }}" method="post">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <fieldset>
+                <div class="form-group">
+								<span class="input-icon">
+                                    <label for="username">Nom d'utilisateur</label>
+									<input type="text" id="username" class="form-control" name="_username" placeholder="Nom d'utilisateur" value="{{ last_username }}" required="required" />
+									 </span>
+                </div>
+                <div class="form-group form-actions">
+								<span class="input-icon">
+                                    <label for="password">Mot de passe</label>
+									<input type="password" id="password" class="form-control" name="_password" placeholder="Mot de passe" required="required"/>
+								</span>
+                </div>
+                <div class="form-group form-actions">
+                    <button type="submit" style="margin:auto;" class="btn btn-primary pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
+                        Connexion <i class="fa fa-arrow-circle-right"></i>
+                    </button>
+                </div>
+            </fieldset>
+        </form>
+
+
+    </div> <!-- /.account-body -->
+
+    <div class="account-footer">
+        <p>
+            Vous n'avez pas de compte? &nbsp;
+            <a href="{{ path("fos_user_registration_register") }}" class="">Inscrivez-vous!</a>
+        </p>
+    </div> <!-- /.account-footer -->
+
+</div>
+</body>
+</html>
