--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -7,36 +7,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-sm-6 col-xs-12">
-                <h4>A PROPOS DE NOUS</h4>
-                <p>Bourse d'échange de logement dans la commune de Montpellier.</p>
+                <h4>Réseaux Sociaux</h4>
                 <a href="#" class="button social-btn"><i class="fa fa-facebook-official"></i> Retrouvez-nous sur Facebook</a>
             </div>
 
             <div class="col-md-4  col-sm-6 col-xs-12">
-                <h4>Helpful Links</h4>
+                <h4>Liens utiles</h4>
                 <ul class="footer-links">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Press Releases</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="{{path ('fos_user_profile_show')}}">Voir mon annonce</a></li>
+                    <li><a href="{{path ('fos_user_profile_edit')}}">Modifier mon profil</a></li>
                 </ul>
 
                 <ul class="footer-links">
-                    <li><a href="#">In the News</a></li>
-                    <li><a href="#">Our Blog</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Fonctionnement</a></li>
+                    <li><a href="#">Démarches</a></li>
                 </ul>
             </div>
 
             <div class="col-md-3  col-sm-12 col-xs-12">
-                <h4>Contact Us</h4>
+                <h4>Informations</h4>
                 <div class="text-widget">
-                    <span>12345 Little Lonsdale St, Melbourne</span> <br />
-                    Phone: <span>(123) 123-456 </span><br />
-                    Fax: <span>(123) 123-456</span> <br />
-                    E-Mail:<span> office@example.com </span><br />
+                    Téléphone : <span>06 51 31 47 30 </span><br />
+                    E-Mail :<span> contact@monbonhlm.fr </span><br />
                 </div>
             </div>
 
