--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -14,13 +14,13 @@
             <div class="col-md-4  col-sm-6 col-xs-12">
                 <h4>Liens utiles</h4>
                 <ul class="footer-links">
-                    <li><a href="{{path ('fos_user_profile_show')}}">Voir mon annonce</a></li>
+                    <li><a href="{{path ('fos_user_profile_show')}}">Voir mon compte</a></li>
                     <li><a href="{{path ('fos_user_profile_edit')}}">Modifier mon profil</a></li>
                 </ul>
 
                 <ul class="footer-links">
-                    <li><a href="#">Fonctionnement</a></li>
-                    <li><a href="#">Démarches</a></li>
+                    <li><a href="{{path ('monbon_hlm_home_demarches')}}">Démarches</a></li>
+                    <li><a href="{{path ('monbon_hlm_home_questionsreponses')}}">Questions / Réponses</a></li>
                 </ul>
             </div>
 
