--- a/src/MonbonHLM/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/MonbonHLM/UserBundle/Resources/views/Profile/show.html.twig
@@ -1,5 +1,116 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+<!DOCTYPE html>
+<!--[if IE 8 ]>
+<html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
 
-{% block fos_user_content %}
-{% include "FOSUserBundle:Profile:show_content.html.twig" %}
-{% endblock fos_user_content %}
+    <!-- Basic Page Needs
+    ================================================== -->
+    <meta charset="utf-8" />
+    <title>Mon compte - MonbonHLM</title>
+    {% include "::base.html.twig" %}
+</head>
+
+<body>
+<!-- Wrapper -->
+<div id="wrapper">
+    {% include "::menu.html.twig" %}
+    <div class="clearfix"></div>
+</div>
+
+
+<div id="titlebar">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+
+                <h2>Mon compte</h2>
+                <!-- <span>Tagline</span> -->
+
+                <!-- Breadcrumbs -->
+                <nav id="breadcrumbs">
+                    <ul>
+                        <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueil</a></li>
+                        <li><a href="#">Mon compte</a></li>
+                    </ul>
+                </nav>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Content
+================================================== -->
+<div class="container">
+    <div class="row sticky-wrapper">
+        <div class="col-md-12">
+            <div class="row">
+                <ul class="details">
+                    <li><span>Nom :</span> {{ user.nom }}</li>
+                    <li><span>Prénom :</span> {{ user.prenom }}</li>
+                    <li><span>Téléphone :</span> {{ user.telephone }}</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-12" style="margin-top: 50px;">
+            <div class="row">
+                <h4 class="headline with-border margin-bottom-20">Mon annonce</h4>
+                <!-- Photos -->
+                <div class="col-md-12 sticky-wrapper">
+                    <div class="photoGrid big clearfix ">
+                        <a class="item img-hover mfp-gallery" href="{{ asset('uploads/annonces/1/'~annonce.photoprincipal.id~'.'~annonce.photoprincipal.path) }}" title="Photo de l'annonce"><img src="{{ asset('uploads/annonces/1/'~annonce.photoprincipal.id~'.'~annonce.photoprincipal.path) }}" alt="" /></a>
+                        <a class="item img-hover mfp-gallery" href="{{ asset('uploads/annonces/2/'~annonce.photo2.id~'.'~annonce.photo2.path) }}"><img src="{{ asset('uploads/annonces/2/'~annonce.photo2.id~'.'~annonce.photo2.path) }}" alt="" /></a>
+                        <a class="item img-hover mfp-gallery" href="{{ asset('uploads/annonces/3/'~annonce.photo3.id~'.'~annonce.photo3.path) }}"><img src="{{ asset('uploads/annonces/3/'~annonce.photo3.id~'.'~annonce.photo3.path) }}" alt="" /></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="project-details">
+                <h4 class="headline with-border">Annonce numéro {{ annonce.id }}</h4>
+                <div class="col-md-6">
+                    <ul class="list-1">
+                        <li><span>Référence locataire :</span></li>
+                        <li><span>Type de logement :</span> {{ annonce.typelogement.type }}</li>
+                        <li><span>Adresse :</span> {{ annonce.adresse }}</li>
+                        <li><span>Etage :</span> {{ annonce.etage }}</li>
+                        <li><span>Quartier :</span> <a href="#"> {{ annonce.quartier.nom }}</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-1">
+                        <li><span>Bailleur :</span> <a href="#"> {{ annonce.referencebailleur.nom }}</a></li>
+                        <li><span>Numéro de logement :</span> {{ annonce.numerologement }}</li>
+                        <li><span>Code postal :</span> {{ annonce.codepostal.code }}</li>
+                        <li><span>Description :</span> {{ annonce.descriptioncomplementaire }}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12" style="margin-top: 50px;">
+            <div class="row">
+                <h4 class="headline with-border margin-bottom-20">Modifier</h4>
+                <ul class="services-list sticky">
+                    <li><a href="{{path ('fos_user_profile_edit')}}">Modifier mon profil</a></li>
+                    <li><a href="{{ path('monbon_hlm_home_modifier_annonce', {'id':annonce  .id}) }}">Modifier mon annonce</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Footer
+================================================== -->
+{% include "::footer.html.twig" %}
+
+<!-- Back To Top Button -->
+
+{% include "::scripts.html.twig" %}
+
+
+</div>
+<!-- Wrapper / End -->
+
+</body>
+</html>
